--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+	display: block;
+}
+
 #leftbar {
 	background-color:#C0C0C0;
 	float:left;
@@ -39,6 +43,38 @@
 
 }
 
-#gameInformation{
+#gameInformation {
 	margin-top: 20px;
+	height: 15%;
+}
+
+#tileSelection {
+	border-style: solid;
+	border-width: 2px;
+	width: 100%;
+	height:20%;
+	/*display: inline-block;*/
+}
+
+div.tile {
+	border-style: solid;
+	border-color: #002255;
+	border-width: 1px;
+	width: 12%;
+	height: 75%;
+	float: left;
+	margin-left: 10px;
+	margin-top: 10px;
+}
+
+div.tileSelected {
+	border-style: solid;
+	border-color: #002255;
+	border-width: 1px;
+	width: 12%;
+	height: 75%;
+	float: left;
+	margin-left: 10px;
+	margin-top: 10px;
+	background-color: yellow;
 }
