Added paper.js, set up canvas
The game still runs in the background, but with no buttons. It will
eventually crash. The canvas can be drawn on by clicking on it.

--- a/style.css
+++ b/style.css
@@ -78,3 +78,11 @@ div.tileSelected {
 	margin-top: 10px;
 	background-color: yellow;
 }
+
+canvas#game{
+	border-style: solid;
+	border-color: #000000;
+	border-width: 2px;
+	height: 50%;
+	width: 100%;
+}
