--- a/style.css
+++ b/style.css
@@ -83,6 +83,11 @@ canvas#game{
 	border-style: solid;
 	border-color: #000000;
 	border-width: 2px;
-	height: 50%;
-	width: 100%;
+	height: 600px;
+	width: 1100px;
+	margin-left: auto;
+	margin-right: auto;
+	padding-left: 0;
+	padding-right: 0;
+	display: block;
 }
