Made the chat fit the screen better.
This new branch is to be used in case the lobby remains unusable, we
will still be able to demo

--- a/style.css
+++ b/style.css
@@ -34,11 +34,11 @@ body {
 	min-height: 50%;
 }
 
-#messages {
-	height: 50%;
+
+
+#chat {
 	border:1px solid #ccc;
-	font:16px/26px Georgia, Garamond, Serif;
-	overflow:auto;
+	width:100%;
 	max-width:100%;
 	margin-left: 10px;
 	margin-right: 10px;
