--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@ body {
 	background-color:#C0C0C0;
 	float:right;
 	min-height:100%;
-	min-width: 10%;
+	min-width: 9%;
+	max-width: 9%
 }
 
 #topbar {
@@ -33,12 +34,17 @@ body {
 	min-height: 50%;
 }
 
+#messages{
+	width: 100%;
+	max-width:100%;
+	height: 30%;
+}
+
 #chat{
 	border:1px solid #ccc;
 	width: 100%;
 	max-width:100%;
-	margin-left: 10px;
-	margin-right: 10px;	
+	height: 100%;
 }
 
 #gameInformation {
